# sigma-authentication

./: .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  flake.nix  fly.toml
.github/workflows/: ci.yaml  deploy-to-prod.yaml  rollback.yaml
.sqlx/: query-1c217b3a3da750e749a82fa31a35ef869a473c82e8ca5a026fd45da7516c38f6.json  query-236d89006a7eab144e087b593d8a16f22f7f5b5e8463a4091501f44506b21683.json  query-2a66eb0845692f8ee4e6536ba5ab7f38235a9d71544ff8d8a6e1ecfca7e61292.json  query-3ba84385cff10a844252cfaf724486e49d2cf6d27e34433127688181da084c41.json  query-3e3f404260e1df40925aef7002e357bc9e23e391f37fbfbe9cf6ed51149cb279.json  query-4cecf63520940d273675630b8151745edb2d786fe164b2abcbd3cd009fa52abc.json  query-5387df330b06986c3816056fb87e0e011c477753f80846cd467897b6c361a79d.json  query-6f624cd931b5b6293d6b1d016f55f4d8aeb982ab368b72ca3c3563edfc0852fb.json  query-767417b58c6a4cb923d85ad000040d652e5a0e9144705116df46f121a32c676a.json  query-8af6bb6a149bca96280bac190154681dac63f18a276205b9c22bea0e75e2a8c6.json  query-a7c6d72ff583becf6725e679de77392403665855a9a184ffcb1e252bc135a186.json  query-b5c3db3977d5088e912856ec54a46ab1309eeb1c6cb8c83806b79dd0c84508fa.json  query-c68f74130b28c00e94d1ade3acefb1bf4404da12e0b4b90ab67e14a1d174e369.json  query-e887bfde8da52fbc2968e1c3c7e74edbc8eeda87f029247c464e94c6cc52d303.json  query-ea156ec0969f877ba008dcb7c31efe78361f7773338455111480509b344a026e.json
migrations/: 20250501100505_init_user.up.sql  20250518165615_init_table_sessions.down.sql  20250518165615_init_table_sessions.up.sql  20250518174933_rename_users_to_admins.down.sql  20250518174933_rename_users_to_admins.up.sql  20250523152712_add_name_field.down.sql  20250523152712_add_name_field.up.sql  20250526110329_add_order_and_checkout.down.sql  20250526110329_add_order_and_checkout.up.sql
proto/: admin.proto  authentication.proto  table_session.proto
src/: app.rs  controllers.rs  database.rs  dto.rs  errors.rs  lib.rs  main.rs  models.rs  registries.rs  strategies.rs
src/admin/: admin_grpc.rs  admin_model.rs  admin_repository.rs  admin_rest.rs  admin_service.rs  mod.rs
src/controllers/: admin.rs  home.rs  mod.rs  table_session.rs
src/grpc/: admin.rs  mod.rs
src/models/: admin.rs  mod.rs  table_session.rs
src/repository/: admin_repository.rs  mod.rs  table_session_repository.rs  user_repository.rs
src/service/: admin_service.rs  mod.rs  table_session_service.rs  token_service.rs  user_service.rs
src/strategies/: google.rs  mod.rs  password.rs  tests.rs
src/table_session/: mod.rs  table_session_grpc.rs  table_session_model.rs  table_session_repository.rs  table_session_service.rs
src/token/: token_service.rs
src/utils/: mod.rs
tests/: home.rs  lib.rs  utils.rs
tests/controllers/: home.rs
tests/repository/: user_repository.rs
(+1 files in other folders)
