[package]
name = "sigma-authentication"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
dotenvy = "0.15.7"
password-hash = "0.5.0"
rocket = { version = "0.5.1", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono"] }
chrono = { version = "0.4.41", features = ["serde"] }
jsonwebtoken = "9.3.1"
thiserror = "2.0.12"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
validator = { version = "0.19", features = ["derive"] }

[dev-dependencies]
testcontainers = "0.23.3"
testcontainers-modules = { version = "0.11.6", features = ["postgres"] }
