[package]
name = "sigma-authentication"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core dependencies
tokio = { version = "1.45.0", features = ["full"] }
thiserror = "2.0.12"
dotenvy = "0.15.7"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
validator = { version = "0.19", features = ["derive"] }

# Authentication
argon2 = "0.5.3"
password-hash = "0.5.0"
jsonwebtoken = "9.3.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono"] }

# gRPC and Protocol Buffers
tonic = "0.13.1"
prost = "0.13.5"

# Utils
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
testcontainers = "0.23.3"
testcontainers-modules = { version = "0.11.6", features = ["postgres"] }

[build-dependencies]
tonic-build = "0.13.1"
